--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
     <string name="laki">Laki Laki</string>
     <string name="wanita">Perempuan</string>
     <string name="wanita2">Cewe</string>
+    <string name="laki2">Cowo</string>
     <string name="submit">Submit</string>
 </resources>
